# django-oscar-api-checkout

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
oscarapicheckout/: app.py  apps.py  cache.py  config.py  email.py  handlers.py  methods.py  mixins.py  permissions.py  serializers.py  settings.py  signals.py  states.py  utils.py  views.py
oscarapicheckout/fixtures/: api-checkout-test.yaml
oscarapicheckout/tests/: base.py  test_checkout.py  test_fraud.py  test_methods.py  test_payment_method_introspection.py  test_permissions.py
sandbox/: settings.py  urls.py
sandbox/clientside/: methods.py  urls.py  views.py
sandbox/creditcards/: methods.py  urls.py  views.py
sandbox/order/: __init__.py  admin.py  apps.py  config.py  models.py  utils.py
sandbox/order/migrations/: 0001_initial.py  0002_auto_20141007_2032.py  0003_auto_20150113_1629.py  0004_auto_20160111_1108.py  0005_auto_20170502_1533.py  0009_surcharge.py  0011_alter_surcharge_options_line_tax_code_and_more.py  0016_order_analytics_tracked.py
sandbox/sandbox/: settings.py  urls.py
sandbox/sandbox/creditcards/: methods.py  urls.py  views.py
sandbox/sandbox/order/: __init__.py  apps.py  config.py  utils.py
sandbox/sandbox/order/migrations/: 0001_initial.py  0002_auto_20141007_2032.py  0003_auto_20150113_1629.py  0004_auto_20160111_1108.py  0005_auto_20170502_1533.py  0006_auto_20190926_1152.py  0008_auto_20190301_1035.py  0009_surcharge.py  0010_auto_20210201_1735.py  0011_alter_surcharge_options_line_tax_code_and_more.py  0012_orderlinediscount.py  0013_line_allocation_cancelled_line_num_allocated.py  0014_set_num_allocated_to_quantity.py  0015_alter_line_num_allocated.py
src/oscarapicheckout/: __init__.py  apps.py  cache.py  config.py  email.py  fraud.py  handlers.py  methods.py  mixins.py  permissions.py  serializers.py  settings.py  signals.py  states.py  utils.py  views.py
src/oscarapicheckout/locale/es/LC_MESSAGES/: django.mo  django.po
src/oscarapicheckout/tests/: base.py  test_cache.py  test_checkout.py  test_fraud.py  test_methods.py  test_payment_method_introspection.py  test_permissions.py
