[build-system]
requires = [ "poetry-core>=2.0.1",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-oscar-api-checkout"
version = "3.5.1"
description = "An extension on top of django-oscar-api providing a more flexible checkout API with a pluggable payment methods interface."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-api-checkout"
repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-api-checkout"
license = "ISC"

[[tool.poetry.packages]]
include = "oscarapicheckout"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.18"
django-oscar = "3.2.5"
django-oscar-api = "3.3.0"
drf-recaptcha = "^4.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.10"
flake8 = "^7.1.1"
psycopg2-binary = "^2.9.10"
PyYAML = "^6.0.2"
sorl-thumbnail = "^12.11.0"
sphinx = "^8.1.3"
tox = "^4.23.2"
unittest-xml-reporting = "^3.2.0"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
